--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,3 +50,38 @@ a:visited {
 a {
   text-decoration: none;
 }
+
+.repo-header {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin: 0;
+    font-family: "Space Grotesk", -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+}
+
+.repo {
+  padding: 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 30rem;
+}
+.public {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 400;
+  color: rgb(75, 85, 99);
+  border: 1px solid rgb(209, 213, 219);
+  border-radius: 0.25rem;
+  padding: 0.125rem 0.25rem;
+  margin-left: 0.25rem;
+}
+.delete {
+  color: white;
+  background-color: rgb(190, 24, 93);
+}
+.delete:disabled {
+  color: white;
+  background-color: rgb(209, 213, 219);
+}
